welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: value bas is not a member of object Math
  t2 = Math.bas(t2)
            ^nearHundred:7: error: not found: value flase
  else {return flase}
               ^